# markovtransition

./: .gitignore  .rustfmt.toml  Cargo.toml  build.py  entity.py  tensor.py  triagram.py
in/: alice.txt  mlk.txt
xtask/: Cargo.toml
xtask/src/: main.rs
